--- a/css/style.css
+++ b/css/style.css
@@ -42,118 +42,157 @@ body {
   background-color: #fafbfe;
 }
 
-#sidebar {
-  width: 70px;
-  min-width: 70px;
-  z-index: 1000;
-  transition: all 0.25s ease-in-out;
-  background-color: #0e2238;
+.header{
+  width: 100%;
+  height: var(--header-height);
+  position: fixed;
+  top: 0;
+  left: 0;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  padding: 0 1rem;
+  background-color: var(--white-color);
+  z-index: var(--z-fixed);
+  transition: .5s;
+}
+
+.header__toggle{
+  color: var(--first-color);
+  font-size: 1.5rem;
+  cursor: pointer;
+}
+
+.header__img{
+  width: 35px;
+  height: 35px;
+  display: flex;
+  justify-content: center;
+  border-radius: 50%;
+  overflow: hidden;
+}
+
+.header__img img{
+  width: 40px;
+}
+
+/*===== NAV =====*/
+.l-navbar{
+  position: fixed;
+  top: 0;
+  left: -30%;
+  width: var(--nav-width);
+  height: 100vh;
+  background-color: var(--first-color);
+  padding: .5rem 1rem 0 0;
+  transition: .5s;
+  z-index: var(--z-fixed);
+}
+
+.nav{
+  height: 100%;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
+  overflow: hidden;
 }
 
-#sidebar.expand {
-  width: 260px;
-  min-width: 260px;
+.nav__logo, .nav__link{
+  display: grid;
+  grid-template-columns: max-content max-content;
+  align-items: center;
+  column-gap: 1rem;
+  padding: .5rem 0 .5rem 1.5rem;
 }
 
-.toggle-btn {
-  background-color: transparent;
-  cursor: pointer;
-  border: 0;
-  padding: 1rem 1.5rem;
+.nav__logo{
+  margin-bottom: 2rem;
 }
 
-.toggle-btn i {
-  font-size: 1.5rem;
-  color: #fff;
+.nav__logo-icon{
+  font-size: 1.25rem;
+  color: var(--white-color);
 }
 
-.sidebar-logo {
-  margin: auto 0;
+.nav__logo-name{
+  color: var(--white-color);
+  font-weight: 700;
 }
 
-.sidebar-logo a {
-  color: #fff;
-  font-size: 1.15rem;
-  font-weight: 600;
-}
-
-#sidebar:not(.expand) .sidebar-logo,
-#sidebar:not(.expand) a.sidebar-link span {
-  display: none;
-}
-
-.sidebar-nav {
-  padding: 2rem 0;
-  flex: 1 1 auto;
-}
-
-a.sidebar-link {
-  padding: 0.625rem 1.625rem;
-  color: #fff;
-  display: block;
-  font-size: 0.9rem;
-  white-space: nowrap;
-  border-left: 3px solid transparent;
-}
-
-.sidebar-link i {
-  font-size: 1.1rem;
-  margin-right: 0.75rem;
-}
-
-a.sidebar-link:hover {
-  background-color: rgba(255, 255, 255, 0.075);
-  border-left: 3px solid #3b7ddd;
-}
-
-.sidebar-item {
+.nav__link{
   position: relative;
+  color: var(--first-color-light);
+  margin-bottom: 1.5rem;
+  transition: .3s;
 }
 
-#sidebar:not(.expand) .sidebar-item .sidebar-dropdown {
+.nav__link:hover{
+  color: var(--white-color);
+}
+
+.nav__icon{
+  font-size: 1.25rem;
+}
+
+/*Show navbar movil*/
+.show{
+  left: 0;
+}
+
+/*Add padding body movil*/
+.body-pd{
+  padding-left: calc(var(--nav-width) + 1rem);
+}
+
+/*Active links*/
+.active{
+  color: var(--white-color);
+}
+
+.active::before{
+  content: '';
   position: absolute;
-  top: 0;
-  left: 70px;
-  background-color: #0e2238;
-  padding: 0;
-  min-width: 15rem;
-  display: none;
+  left: 0;
+  width: 2px;
+  height: 32px;
+  background-color: var(--white-color);
 }
 
-#sidebar:not(.expand) .sidebar-item:hover .has-dropdown + .sidebar-dropdown {
-  display: block;
-  max-height: 15em;
-  width: 100%;
-  opacity: 1;
-}
+/* ===== MEDIA QUERIES=====*/
+@media screen and (min-width: 768px){
+  body{
+    margin: calc(var(--header-height) + 1rem) 0 0 0;
+    padding-left: calc(var(--nav-width) + 2rem);
+  }
 
-#sidebar.expand .sidebar-link[data-bs-toggle="collapse"]::after {
-  border: solid;
-  border-width: 0 0.075rem 0.075rem 0;
-  content: "";
-  display: inline-block;
-  padding: 2px;
-  position: absolute;
-  right: 1.5rem;
-  top: 1.4rem;
-  transform: rotate(-135deg);
-  transition: all 0.2s ease-out;
-}
+  .header{
+    height: calc(var(--header-height) + 1rem);
+    padding: 0 2rem 0 calc(var(--nav-width) + 2rem);
+  }
 
-#sidebar.expand .sidebar-link[data-bs-toggle="collapse"].collapsed::after {
-  transform: rotate(45deg);
-  transition: all 0.2s ease-out;
-}
+  .header__img{
+    width: 40px;
+    height: 40px;
+  }
 
-.navbar {
-  background-color: #fff;
-  box-shadow: 0 0 2rem 0 rgba(33, 37, 41, 0.1);
-}
+  .header__img img{
+    width: 45px;
+  }
 
-.navbar-expand .navbar-collapse {
-  min-width: 200px;
+  .l-navbar{
+    left: 0;
+    padding: 1rem 1rem 0 0;
+  }
+  
+  /*Show navbar desktop*/
+  .show{
+    width: calc(var(--nav-width) + 156px);
+  }
+
+  /*Add padding body desktop*/
+  .body-pd{
+    padding-left: calc(var(--nav-width) + 188px);
+  }
 }
 
 .card {
