Update terbaru admin+petugas+masyarakat

--- a/css/masyarakat.css
+++ b/css/masyarakat.css
@@ -53,7 +53,7 @@ body {
 #header-toggle {
   position: relative;
   z-index: 2000; 
-  transition: left 0.3s ease;
+  transition: left 0.3s ease
 }
 #header-toggle.bx-x {
   position: relative;
